task/BASH-26-fix фикс мобильного меню

--- a/pages/main_page/main_page.html
+++ b/pages/main_page/main_page.html
@@ -1350,27 +1350,31 @@
             </div>
             <div class="menu__popup-header-div"></div>
         </div>
-        <div class="menu__popup-user">
-            <div class="menu__popup-user-icon">
-                <img src="../../assets/imgs/Avatars.png" alt="user-logo">
+        <div class="menu-popup-wrapper">
+            <div class="menu__popup-user">
+                <div class="menu__popup-user-icon">
+                    <img src="../../assets/imgs/Avatars.png" alt="user-logo">
+                </div>
+                <p class="menu__popup-user-name text-md">Фамилия Имя Отчёство</p>
+                <div class="menu__popup-user-goals">0 Б</div>
+                <div class="main__button white">Профиль</div>
             </div>
-            <p class="menu__popup-user-name text-md">Фамилия Имя Отчёство</p>
-            <div class="menu__popup-user-goals">0 Б</div>
-            <div class="main__button white">Профиль</div>
+            <div class="menu__popup-content">
+                <a class="text-md" href="#">Мероприятия</a>
+                <div class="line"></div>
+                <a class="text-md" href="#">О нас</a>
+                <div class="line"></div>
+                <a class="text-md" href="#">Новости</a>
+                <div class="line"></div>
+                <a class="text-md" href="#">Партнёры</a>
+                <div class="line"></div>
+                <a class="text-md" href="#">Мотивация</a>
+                <div class="line"></div>
+                <a class="text-md" href="#">Рейтинг волонтёров</a>
+            </div>
+            <div></div>
         </div>
-        <div class="menu__popup-content">
-            <a class="text-md" href="#">Мероприятия</a>
-            <div class="line"></div>
-            <a class="text-md" href="#">О нас</a>
-            <div class="line"></div>
-            <a class="text-md" href="#">Новости</a>
-            <div class="line"></div>
-            <a class="text-md" href="#">Партнёры</a>
-            <div class="line"></div>
-            <a class="text-md" href="#">Мотивация</a>
-            <div class="line"></div>
-            <a class="text-md" href="#">Рейтинг волонтёров</a>
-        </div>
+        
     </div>
     <div class="some-popup  auth-popup">
         <div class="some-popup__background"></div>
