--- a/pages/main_page/main_page.html
+++ b/pages/main_page/main_page.html
@@ -71,8 +71,6 @@
                 </span> самостоятельно</p>
         </div>
         <div class="main__page-cards mt-md">
-
-
             <div class="swiper main__page-cards-swiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
@@ -94,20 +92,17 @@
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <div class="main__page-card">
-                            <p class="title-md">Волонтёрство</p>
-                            <p class="text-md">Добро меняет мир</p>
+                        <div class="main__page-card purple">
+                            <p class="title-md">Организация</p>
+                            <p class="text-md">Создайте возможность для помощи нуждающимся</p>
                             <div class="main__page-card-button main__button">Стать волонтёром</div>
-                            <div class="main__page-card-bg"><svg width="593" height="564" viewBox="0 0 593 564"
-                                    fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path
-                                        d="M457.893 554C426.545 431.773 288.936 85.5064 488.974 17.8969C724.51 -61.7103 500.132 490.368 9.99998 339.241"
-                                        stroke="white" stroke-width="20" stroke-linecap="round"
-                                        stroke-linejoin="round" />
+                            <div class="main__page-card-bg"><svg width="668" height="386" viewBox="0 0 668 386" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M796.5 10C502.5 44.5 302.727 470 286.5 237C273.093 44.5 137 86.5 -46 375.499" stroke="white" stroke-width="20" stroke-linecap="round" stroke-linejoin="round"/>
                                 </svg>
+                                
                             </div>
-                            <div class="main__page-card-image"><img
-                                    src="../../assets/imgs/vinicius-amnx-amano-0NCjjD0zGnw-unsplash 1.png" alt="image">
+                            <div class="main__page-card-image man-with-black-hodie"><img
+                                    src="../../assets/imgs/vinicius-amnx-amano-0NCjjD0zGnw-unsplash 1 (1).png" alt="image">
                             </div>
                         </div>
                     </div>
@@ -124,11 +119,11 @@
                                         stroke-linejoin="round" />
                                 </svg>
                             </div>
-                            <div class="main__page-card-image"><img
-                                    src="../../assets/imgs/vinicius-amnx-amano-0NCjjD0zGnw-unsplash 1.png" alt="image">
+                            <div class="main__page-card-image"><img src="../../assets/imgs/vinicius-amnx-amano-0NCjjD0zGnw-unsplash 1.png" alt="image">
                             </div>
                         </div>
                     </div>
+                    
                 </div>
                 <div class="swiper-pagination"></div>
             </div>
@@ -565,9 +560,9 @@
                     </div>
                 </div>
                 <div class="event__card last">
-                    <p class="text-lg">Все основные мероприятия</p>
+                    <p class="text-xl primary">Все основные мероприятия</p>
                     <p class="text-sm">Примите участие в главных мероприятиях Республики Башкортостан</p>
-                    <div class="main__button white">Все мероприятия</div>
+                    <div class="main__button white">Все мероприятия</div> 
                 </div>
             </div>
         </div>
@@ -797,8 +792,6 @@
                     штабов</span></button>
               </div>
         </main>
-
-
 
     <div class="container">
         <div class="main__page-news mt-2xl">
