ЛК Профиль редактирование

--- a/pages/lk_org_profile/lk_profile_edit.html
+++ b/pages/lk_org_profile/lk_profile_edit.html
@@ -103,13 +103,13 @@
         <div class="profile-right edit">
           <div class="profile-right-user info user-info-padding">
             <div class="profile__avatar">
-              <img src="../../assets/imgs/Frame 27177.png" alt="image" />
+              <img src="../../assets/imgs/Frame 27177 (1).png" alt="image" />
             </div>
             <div class="profile__text">
-              <p class="title-sm dark">Фото профиля</p>
-              <div class="profile__edit text-sm">
-                <div class="main__button">Добавить фотографию</div>
-              </div>
+              <p class="title-sm dark">Обложка организации</p>
+                <label for="add-file" class="main__button lk-profile-edit-button">Добавить фотографию
+                  <input type="file" hidden id="add-file" name="add-file">
+                </label>
             </div>
           </div>
 
