ЛК Публичные мероприятия детальная(волонтеры)

--- a/pages/lk_events/index_detail.html
+++ b/pages/lk_events/index_detail.html
@@ -82,8 +82,8 @@
                     </svg>
                     Назад</p>
                 <p class="title-sm dark">Конкурс для участия в Волонтерской экспедиции «По пути с добром»</p>
-            <div class="profile-right events">
-                <div class="detail__content-left profile">
+            <div class="profile-right events no-wrap">
+                <div class="detail__content-left lk-event">
                     <div class="event__card publish">
                         <div class="event__card-top">
                             <img src="../../assets/imgs/Frame 27062.png" alt="image">
