--- a/pages/lk_org_events/index_add.html
+++ b/pages/lk_org_events/index_add.html
@@ -155,8 +155,12 @@
                     fill="#B6C0CF" />
                 </svg>
                 <div class="universal__select-inside ">
-                  <p class="text-md text-bold primary"> 1:1</p>
-                  <p class="text-md text-bold primary"> 1:1</p>
+                  <a href="#" class="text-md text-bold primary profile-add-item-select"> 1:1</a>
+                  <a href="#" class="text-md text-bold primary profile-add-item-select"> 1:1</a>
+                  <a href="#" class="text-md text-bold primary profile-add-item-select"> 1:1</a>
+                  <a href="#" class="text-md text-bold primary profile-add-item-select"> 1:1</a>
+                  <a href="#" class="text-md text-bold primary profile-add-item-select"> 1:1</a>
+                  <a href="#" class="text-md text-bold primary profile-add-item-select"> 1:1</a>
                 </div>
               </div>
             </div>
@@ -268,7 +272,7 @@
         </div>
         <div class="profile-right-user info-edit user-info-padding detail__news-left-add__comment-input">
           <p class="title-sm dark">Описание</p>
-          <!-- bitrix component -->
+          bitrix component
           <textarea class="send-report__textarea"></textarea>
         </div>
         <div class="profile-right-user info-edit user-info-padding">
@@ -277,23 +281,39 @@
             Название
 
             <div class="universal__select-inside org_add">
-              <div class="partners-dropdown-item text-md text-bold">
+              <a href="#" class="partners-dropdown-item text-md dark text-bold">
                 <img src="../../assets/imgs/Image.svg" alt="img" />
                 Партнер 1
-              </div>
-              <div class="partners-dropdown-item text-md text-bold">
+              </a>
+              <a href="#" class="partners-dropdown-item text-md dark text-bold">
                 <img src="../../assets/imgs/Image.svg" alt="img" />
-                Партнер 2
-              </div>
-              <div class="partners-dropdown-item text-md text-bold">
+                Партнер 1
+              </a>
+              <a href="#" class="partners-dropdown-item text-md dark text-bold">
                 <img src="../../assets/imgs/Image.svg" alt="img" />
-                Партнер 3
-              </div>
+                Партнер 1
+              </a>
+              <a href="#" class="partners-dropdown-item text-md dark text-bold">
+                <img src="../../assets/imgs/Image.svg" alt="img" />
+                Партнер 1
+              </a>
+              <a href="#" class="partners-dropdown-item text-md dark text-bold">
+                <img src="../../assets/imgs/Image.svg" alt="img" />
+                Партнер 1
+              </a>
+              <a href="#" class="partners-dropdown-item text-md dark text-bold">
+                <img src="../../assets/imgs/Image.svg" alt="img" />
+                Партнер 1
+              </a>
+              <a href="#" class="partners-dropdown-item text-md dark text-bold">
+                <img src="../../assets/imgs/Image.svg" alt="img" />
+                Партнер 1
+              </a>
             </div>
           </div>
 
           <div class="partners-dropdown-items">
-            <div class="partners-dropdown-item text-md text-bold">
+            <a href="#" class="partners-dropdown-item text-md dark text-bold">
               <img src="../../assets/imgs/Image.svg" alt="img" />
               Партнер 1
               <svg class="partners-dropdown-item-del" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
@@ -302,8 +322,8 @@
                   d="M19.281 18.2198C19.3507 18.2895 19.406 18.3722 19.4437 18.4632C19.4814 18.5543 19.5008 18.6519 19.5008 18.7504C19.5008 18.849 19.4814 18.9465 19.4437 19.0376C19.406 19.1286 19.3507 19.2114 19.281 19.281C19.2114 19.3507 19.1286 19.406 19.0376 19.4437C18.9465 19.4814 18.849 19.5008 18.7504 19.5008C18.6519 19.5008 18.5543 19.4814 18.4632 19.4437C18.3722 19.406 18.2895 19.3507 18.2198 19.281L12.0004 13.0607L5.78104 19.281C5.64031 19.4218 5.44944 19.5008 5.25042 19.5008C5.05139 19.5008 4.86052 19.4218 4.71979 19.281C4.57906 19.1403 4.5 18.9494 4.5 18.7504C4.5 18.5514 4.57906 18.3605 4.71979 18.2198L10.9401 12.0004L4.71979 5.78104C4.57906 5.64031 4.5 5.44944 4.5 5.25042C4.5 5.05139 4.57906 4.86052 4.71979 4.71979C4.86052 4.57906 5.05139 4.5 5.25042 4.5C5.44944 4.5 5.64031 4.57906 5.78104 4.71979L12.0004 10.9401L18.2198 4.71979C18.3605 4.57906 18.5514 4.5 18.7504 4.5C18.9494 4.5 19.1403 4.57906 19.281 4.71979C19.4218 4.86052 19.5008 5.05139 19.5008 5.25042C19.5008 5.44944 19.4218 5.64031 19.281 5.78104L13.0607 12.0004L19.281 18.2198Z"
                   fill="#EF036C" />
               </svg>
-            </div>
-            <div class="partners-dropdown-item text-md text-bold">
+            </a>
+            <a href="#" class="partners-dropdown-item text-md dark text-bold">
               <img src="../../assets/imgs/Image.svg" alt="img" />
               Партнер 1
               <svg class="partners-dropdown-item-del" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
@@ -312,8 +332,8 @@
                   d="M19.281 18.2198C19.3507 18.2895 19.406 18.3722 19.4437 18.4632C19.4814 18.5543 19.5008 18.6519 19.5008 18.7504C19.5008 18.849 19.4814 18.9465 19.4437 19.0376C19.406 19.1286 19.3507 19.2114 19.281 19.281C19.2114 19.3507 19.1286 19.406 19.0376 19.4437C18.9465 19.4814 18.849 19.5008 18.7504 19.5008C18.6519 19.5008 18.5543 19.4814 18.4632 19.4437C18.3722 19.406 18.2895 19.3507 18.2198 19.281L12.0004 13.0607L5.78104 19.281C5.64031 19.4218 5.44944 19.5008 5.25042 19.5008C5.05139 19.5008 4.86052 19.4218 4.71979 19.281C4.57906 19.1403 4.5 18.9494 4.5 18.7504C4.5 18.5514 4.57906 18.3605 4.71979 18.2198L10.9401 12.0004L4.71979 5.78104C4.57906 5.64031 4.5 5.44944 4.5 5.25042C4.5 5.05139 4.57906 4.86052 4.71979 4.71979C4.86052 4.57906 5.05139 4.5 5.25042 4.5C5.44944 4.5 5.64031 4.57906 5.78104 4.71979L12.0004 10.9401L18.2198 4.71979C18.3605 4.57906 18.5514 4.5 18.7504 4.5C18.9494 4.5 19.1403 4.57906 19.281 4.71979C19.4218 4.86052 19.5008 5.05139 19.5008 5.25042C19.5008 5.44944 19.4218 5.64031 19.281 5.78104L13.0607 12.0004L19.281 18.2198Z"
                   fill="#EF036C" />
               </svg>
-            </div>
-            <div class="partners-dropdown-item text-md text-bold">
+            </a>
+            <a href="#" class="partners-dropdown-item text-md dark text-bold">
               <img src="../../assets/imgs/Image.svg" alt="img" />
               Партнер 1
               <svg class="partners-dropdown-item-del" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
@@ -322,7 +342,28 @@
                   d="M19.281 18.2198C19.3507 18.2895 19.406 18.3722 19.4437 18.4632C19.4814 18.5543 19.5008 18.6519 19.5008 18.7504C19.5008 18.849 19.4814 18.9465 19.4437 19.0376C19.406 19.1286 19.3507 19.2114 19.281 19.281C19.2114 19.3507 19.1286 19.406 19.0376 19.4437C18.9465 19.4814 18.849 19.5008 18.7504 19.5008C18.6519 19.5008 18.5543 19.4814 18.4632 19.4437C18.3722 19.406 18.2895 19.3507 18.2198 19.281L12.0004 13.0607L5.78104 19.281C5.64031 19.4218 5.44944 19.5008 5.25042 19.5008C5.05139 19.5008 4.86052 19.4218 4.71979 19.281C4.57906 19.1403 4.5 18.9494 4.5 18.7504C4.5 18.5514 4.57906 18.3605 4.71979 18.2198L10.9401 12.0004L4.71979 5.78104C4.57906 5.64031 4.5 5.44944 4.5 5.25042C4.5 5.05139 4.57906 4.86052 4.71979 4.71979C4.86052 4.57906 5.05139 4.5 5.25042 4.5C5.44944 4.5 5.64031 4.57906 5.78104 4.71979L12.0004 10.9401L18.2198 4.71979C18.3605 4.57906 18.5514 4.5 18.7504 4.5C18.9494 4.5 19.1403 4.57906 19.281 4.71979C19.4218 4.86052 19.5008 5.05139 19.5008 5.25042C19.5008 5.44944 19.4218 5.64031 19.281 5.78104L13.0607 12.0004L19.281 18.2198Z"
                   fill="#EF036C" />
               </svg>
-            </div>
+            </a>
+            <a href="#" class="partners-dropdown-item text-md dark text-bold">
+              <img src="../../assets/imgs/Image.svg" alt="img" />
+              Партнер 1
+              <svg class="partners-dropdown-item-del" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                viewBox="0 0 24 24" fill="none">
+                <path
+                  d="M19.281 18.2198C19.3507 18.2895 19.406 18.3722 19.4437 18.4632C19.4814 18.5543 19.5008 18.6519 19.5008 18.7504C19.5008 18.849 19.4814 18.9465 19.4437 19.0376C19.406 19.1286 19.3507 19.2114 19.281 19.281C19.2114 19.3507 19.1286 19.406 19.0376 19.4437C18.9465 19.4814 18.849 19.5008 18.7504 19.5008C18.6519 19.5008 18.5543 19.4814 18.4632 19.4437C18.3722 19.406 18.2895 19.3507 18.2198 19.281L12.0004 13.0607L5.78104 19.281C5.64031 19.4218 5.44944 19.5008 5.25042 19.5008C5.05139 19.5008 4.86052 19.4218 4.71979 19.281C4.57906 19.1403 4.5 18.9494 4.5 18.7504C4.5 18.5514 4.57906 18.3605 4.71979 18.2198L10.9401 12.0004L4.71979 5.78104C4.57906 5.64031 4.5 5.44944 4.5 5.25042C4.5 5.05139 4.57906 4.86052 4.71979 4.71979C4.86052 4.57906 5.05139 4.5 5.25042 4.5C5.44944 4.5 5.64031 4.57906 5.78104 4.71979L12.0004 10.9401L18.2198 4.71979C18.3605 4.57906 18.5514 4.5 18.7504 4.5C18.9494 4.5 19.1403 4.57906 19.281 4.71979C19.4218 4.86052 19.5008 5.05139 19.5008 5.25042C19.5008 5.44944 19.4218 5.64031 19.281 5.78104L13.0607 12.0004L19.281 18.2198Z"
+                  fill="#EF036C" />
+              </svg>
+            </a>
+            <a href="#" class="partners-dropdown-item text-md dark text-bold">
+              <img src="../../assets/imgs/Image.svg" alt="img" />
+              Партнер 1
+              <svg class="partners-dropdown-item-del" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                viewBox="0 0 24 24" fill="none">
+                <path
+                  d="M19.281 18.2198C19.3507 18.2895 19.406 18.3722 19.4437 18.4632C19.4814 18.5543 19.5008 18.6519 19.5008 18.7504C19.5008 18.849 19.4814 18.9465 19.4437 19.0376C19.406 19.1286 19.3507 19.2114 19.281 19.281C19.2114 19.3507 19.1286 19.406 19.0376 19.4437C18.9465 19.4814 18.849 19.5008 18.7504 19.5008C18.6519 19.5008 18.5543 19.4814 18.4632 19.4437C18.3722 19.406 18.2895 19.3507 18.2198 19.281L12.0004 13.0607L5.78104 19.281C5.64031 19.4218 5.44944 19.5008 5.25042 19.5008C5.05139 19.5008 4.86052 19.4218 4.71979 19.281C4.57906 19.1403 4.5 18.9494 4.5 18.7504C4.5 18.5514 4.57906 18.3605 4.71979 18.2198L10.9401 12.0004L4.71979 5.78104C4.57906 5.64031 4.5 5.44944 4.5 5.25042C4.5 5.05139 4.57906 4.86052 4.71979 4.71979C4.86052 4.57906 5.05139 4.5 5.25042 4.5C5.44944 4.5 5.64031 4.57906 5.78104 4.71979L12.0004 10.9401L18.2198 4.71979C18.3605 4.57906 18.5514 4.5 18.7504 4.5C18.9494 4.5 19.1403 4.57906 19.281 4.71979C19.4218 4.86052 19.5008 5.05139 19.5008 5.25042C19.5008 5.44944 19.4218 5.64031 19.281 5.78104L13.0607 12.0004L19.281 18.2198Z"
+                  fill="#EF036C" />
+              </svg>
+            </a>
+          
           </div>
         </div>
       </div>
