task/BASH-16: Правки

--- a/pages/about_us/about_us.html
+++ b/pages/about_us/about_us.html
@@ -113,25 +113,7 @@
       </div>
     </div>
     <div class="about-us__running-lines">
-      <ul class="running-line__list">
-        <li class="running-line__list-item title-lg">
-          <span class="running-line__list-item_green">345+</span>зарегистрированных организаций
-        </li>
-        <li class="running-line__list-item title-lg">
-          <span class="running-line__list-item_red">653+</span>зарегистрированных мероприятия
-        </li>
-        <li class="running-line__list-item title-lg">
-          <span class="running-line__list-item_green">345+</span>зарегистрированных организаций
-        </li>
-        <li class="running-line__list-item title-lg">
-          <span class="running-line__list-item_red">653+</span>зарегистрированных мероприятия
-        </li>
-        <li class="running-line__list-item title-lg">
-          <span class="running-line__list-item_green">345+</span>зарегистрированных организаций
-        </li>
-        <li class="running-line__list-item title-lg">
-          <span class="running-line__list-item_red">653+</span>зарегистрированных мероприятия
-        </li>
+      <ul class="running-line__list running-list__list-norm">
         <li class="running-line__list-item title-lg">
           <span class="running-line__list-item_green">345+</span>зарегистрированных организаций
         </li>
@@ -140,19 +122,13 @@
         </li>
       </ul>
       <ul class="running-line__list running-line__list-revert">
-        <li class="running-line__list-item title-lg">
+        <li class="running-line__list-item title-lg running-line__list-revert-item">
           <span class="running-line__list-item_green">65 502+</span>часов работы волонтёров
         </li>
-        <li class="running-line__list-item title-lg">
+        <li class="running-line__list-item title-lg running-line__list-revert-item">
           <span class="running-line__list-item_green">203+</span>партнёра
         </li>
-        <li class="running-line__list-item title-lg">
-          <span class="running-line__list-item_green">1502+</span>зарегистрированных волонтёров
-        </li>
-        <li class="running-line__list-item title-lg">
-          <span class="running-line__list-item_green">1502+</span>зарегистрированных волонтёров
-        </li>
-        <li class="running-line__list-item title-lg">
+        <li class="running-line__list-item title-lg running-line__list-revert-item">
           <span class="running-line__list-item_green">1502+</span>зарегистрированных волонтёров
         </li>
       </ul>
