--- a/pages/main_page/main_page.html
+++ b/pages/main_page/main_page.html
@@ -628,49 +628,25 @@
                 </div>
             </div>
             <div class="about-us__running-lines">
-                <ul class="running-line__list">
+                <ul class="running-line__list running-list__list-norm">
                     <li class="running-line__list-item title-lg">
-                        <span class="running-line__list-item_green">345+</span>зарегистрированных организаций
+                      <span class="running-line__list-item_green">345+</span>зарегистрированных организаций
                     </li>
                     <li class="running-line__list-item title-lg">
-                        <span class="running-line__list-item_red">653+</span>зарегистрированных мероприятия
+                      <span class="running-line__list-item_red">653+</span>зарегистрированных мероприятия
                     </li>
-                    <li class="running-line__list-item title-lg">
-                        <span class="running-line__list-item_green">345+</span>зарегистрированных организаций
+                  </ul>
+                  <ul class="running-line__list running-line__list-revert">
+                    <li class="running-line__list-item title-lg running-line__list-revert-item">
+                      <span class="running-line__list-item_green">65 502+</span>часов работы волонтёров
                     </li>
-                    <li class="running-line__list-item title-lg">
-                        <span class="running-line__list-item_red">653+</span>зарегистрированных мероприятия
+                    <li class="running-line__list-item title-lg running-line__list-revert-item">
+                      <span class="running-line__list-item_green">203+</span>партнёра
                     </li>
-                    <li class="running-line__list-item title-lg">
-                        <span class="running-line__list-item_green">345+</span>зарегистрированных организаций
+                    <li class="running-line__list-item title-lg running-line__list-revert-item">
+                      <span class="running-line__list-item_green">1502+</span>зарегистрированных волонтёров
                     </li>
-                    <li class="running-line__list-item title-lg">
-                        <span class="running-line__list-item_red">653+</span>зарегистрированных мероприятия
-                    </li>
-                    <li class="running-line__list-item title-lg">
-                        <span class="running-line__list-item_green">345+</span>зарегистрированных организаций
-                    </li>
-                    <li class="running-line__list-item title-lg">
-                        <span class="running-line__list-item_red">653+</span>зарегистрированных мероприятия
-                    </li>
-                </ul>
-                <ul class="running-line__list running-line__list-revert">
-                    <li class="running-line__list-item title-lg">
-                        <span class="running-line__list-item_green">65 502+</span>часов работы волонтёров
-                    </li>
-                    <li class="running-line__list-item title-lg">
-                        <span class="running-line__list-item_green">203+</span>партнёра
-                    </li>
-                    <li class="running-line__list-item title-lg">
-                        <span class="running-line__list-item_green">1502+</span>зарегистрированных волонтёров
-                    </li>
-                    <li class="running-line__list-item title-lg">
-                        <span class="running-line__list-item_green">1502+</span>зарегистрированных волонтёров
-                    </li>
-                    <li class="running-line__list-item title-lg">
-                        <span class="running-line__list-item_green">1502+</span>зарегистрированных волонтёров
-                    </li>
-                </ul>
+                  </ul>
             </div>
             <div class="interaction-map container">
                 <div class="interaction-map__text-info_mobile">
@@ -943,8 +919,8 @@
         </div>
     </div>
     <div class="about-us__running-lines">
-        <ul class="running-line__list">
-            <li class="running-line__list-item title-lg">
+        <ul class="running-line__list running-list__list-norm_company">
+            <li class="running-line__list-item title-lg ">
                 <div class="about__logo">
                     <div class="about__logo-img"><img src="../../assets/imgs/Logo.png" alt="logo"></div>
                     <p class="text-md">Название компании</p>
@@ -993,32 +969,32 @@
                 </div>
             </li>
         </ul>
-        <ul class="running-line__list running-line__list-revert">
-            <li class="running-line__list-item title-lg">
+        <ul class="running-line__list running-line__list-revert_company">
+            <li class="running-line__list-item title-lg running-line__list-revert-item_company">
                 <div class="about__logo">
                     <div class="about__logo-img"><img src="../../assets/imgs/Logo.png" alt="logo"></div>
                     <p class="text-md">Название компании</p>
                 </div>
             </li>
-            <li class="running-line__list-item title-lg">
+            <li class="running-line__list-item title-lg running-line__list-revert-item_company">
                 <div class="about__logo">
                     <div class="about__logo-img"><img src="../../assets/imgs/Logo.png" alt="logo"></div>
                     <p class="text-md">Название компании</p>
                 </div>
             </li>
-            <li class="running-line__list-item title-lg">
+            <li class="running-line__list-item title-lg running-line__list-revert-item_company">
                 <div class="about__logo">
                     <div class="about__logo-img"><img src="../../assets/imgs/Logo.png" alt="logo"></div>
                     <p class="text-md">Название компании</p>
                 </div>
             </li>
-            <li class="running-line__list-item title-lg">
+            <li class="running-line__list-item title-lg running-line__list-revert-item_company">
                 <div class="about__logo">
                     <div class="about__logo-img"><img src="../../assets/imgs/Logo.png" alt="logo"></div>
                     <p class="text-md">Название компании</p>
                 </div>
             </li>
-            <li class="running-line__list-item title-lg">
+            <li class="running-line__list-item title-lg running-line__list-revert-item_company">
                 <div class="about__logo">
                     <div class="about__logo-img"><img src="../../assets/imgs/Logo.png" alt="logo"></div>
                     <p class="text-md">Название компании</p>
