task/BASH-30: добавить закрытие селктора

--- a/pages/lk_org_events/index_add.html
+++ b/pages/lk_org_events/index_add.html
@@ -467,9 +467,9 @@
         })
       );
 
-    document.querySelectorAll('.universal__select').forEach(el => el.addEventListener('click', () => {
-      el.classList.toggle('active')
-    }))
+    // document.querySelectorAll('.universal__select').forEach(el => el.addEventListener('click', () => {
+    //   el.classList.toggle('active')
+    // }))
   </script>
 
   <div id="footer" class="mt-2xl">
@@ -567,9 +567,9 @@
       <a class="text-md" href="#">Рейтинг волонтёров</a>
     </div>
   </div>
-
-  <script src="./main_page.js"></script>
+  <script src="../main_page/main_page.js"></script>
   <script src="../about_us/about_us.js"></script>
+  
 </body>
 
 </html>
