--- a/pages/motivation/index.html
+++ b/pages/motivation/index.html
@@ -63,12 +63,27 @@
                 </div>
             </div>
             <div class="motivation__filter">
-                <button class="motivation__filter-button btn btn-secondary">
+                <div class="universal__select org-add text-md motivation__filter-button">
+                    <img src="../../assets/imgs/icons/ArrowsDownUp.svg" alt="">
+
+                    <p class="text-md text-bold primary">Сначала дешевые</p>
+                    <img src="../../assets/imgs/icons/CaretDown.svg" alt="">
+
+                    <div class="universal__select-inside ">
+                      <a href="#" class="text-md text-bold primary profile-add-item-select"> 1:1</a>
+                      <a href="#" class="text-md text-bold primary profile-add-item-select"> 1:1</a>
+                      <a href="#" class="text-md text-bold primary profile-add-item-select"> 1:1</a>
+                      <a href="#" class="text-md text-bold primary profile-add-item-select"> 1:1</a>
+                      <a href="#" class="text-md text-bold primary profile-add-item-select"> 1:1</a>
+                      <a href="#" class="text-md text-bold primary profile-add-item-select"> 1:1</a>
+                    </div>
+                  </div>
+                <!-- <button class="motivation__filter-button btn btn-secondary">
                     <img src="../../assets/imgs/icons/ArrowsDownUp.svg" alt="">
                     <p class="text-md motivation__filter-button-text">Сначала дешевые</p>
                     <img src="../../assets/imgs/icons/CaretDown.svg" alt="">
 
-                </button>
+                </button> -->
             </div>
             <ul class="motivation__list">
                 <li class="motivation__list-item" onclick="openMainPopup()">
