--- a/pages/lk_profile/lk_profile_edit.html
+++ b/pages/lk_profile/lk_profile_edit.html
@@ -157,22 +157,22 @@
             <p class="title-sm dark">Организация</p>
             <div class="input-wrapper text-sm gray">
                 Организация
-              <div class="universal__select ">Выберите организацию
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M20.0306 9.53104L12.5306 17.031C12.4609 17.1008 12.3782 17.1561 12.2871 17.1938C12.1961 17.2316 12.0985 17.251 11.9999 17.251C11.9014 17.251 11.8038 17.2316 11.7127 17.1938C11.6217 17.1561 11.539 17.1008 11.4693 17.031L3.9693 9.53104C3.82857 9.39031 3.74951 9.19944 3.74951 9.00042C3.74951 8.80139 3.82857 8.61052 3.9693 8.46979C4.11003 8.32906 4.30091 8.25 4.49993 8.25C4.69895 8.25 4.88982 8.32906 5.03055 8.46979L11.9999 15.4401L18.9693 8.46979C19.039 8.40011 19.1217 8.34483 19.2128 8.30712C19.3038 8.26941 19.4014 8.25 19.4999 8.25C19.5985 8.25 19.6961 8.26941 19.7871 8.30712C19.8781 8.34483 19.9609 8.40011 20.0306 8.46979C20.1002 8.53947 20.1555 8.6222 20.1932 8.71324C20.2309 8.80429 20.2503 8.90187 20.2503 9.00042C20.2503 9.09896 20.2309 9.19654 20.1932 9.28759C20.1555 9.37863 20.1002 9.46136 20.0306 9.53104Z" fill="#606C7D"/>
-                    </svg>
-                    <div class="universal__select-inside">
-                        <div class="universal__select-inside-item">
-                            Организация
-                        </div>
-                        <div class="universal__select-inside-item">
-                            Организация
-                        </div>
-                        <div class="universal__select-inside-item">
-                            Организация
-                        </div>
-                    </div>
-              </div>
+                <div class="universal__select org-add text-md">
+                  <p class="text-md text-bold primary"> Выберите организацию</p>
+                  <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      d="M16.6925 7.94254L10.4425 14.1925C10.3845 14.2506 10.3156 14.2967 10.2397 14.3282C10.1638 14.3597 10.0825 14.3758 10.0003 14.3758C9.91821 14.3758 9.83688 14.3597 9.76101 14.3282C9.68514 14.2967 9.61621 14.2506 9.55816 14.1925L3.30816 7.94254C3.19088 7.82526 3.125 7.6662 3.125 7.50035C3.125 7.3345 3.19088 7.17544 3.30816 7.05816C3.42544 6.94088 3.5845 6.875 3.75035 6.875C3.9162 6.875 4.07526 6.94088 4.19253 7.05816L10.0003 12.8668L15.8082 7.05816C15.8662 7.00009 15.9352 6.95403 16.011 6.9226C16.0869 6.89117 16.1682 6.875 16.2503 6.875C16.3325 6.875 16.4138 6.89117 16.4897 6.9226C16.5655 6.95403 16.6345 7.00009 16.6925 7.05816C16.7506 7.11623 16.7967 7.18517 16.8281 7.26104C16.8595 7.33691 16.8757 7.41823 16.8757 7.50035C16.8757 7.58247 16.8595 7.66379 16.8281 7.73966C16.7967 7.81553 16.7506 7.88447 16.6925 7.94254Z"
+                      fill="#B6C0CF" />
+                  </svg>
+                  <div class="universal__select-inside ">
+                    <a href="#" class="text-md text-bold primary profile-add-item-select"> Организация 1</a>
+                    <a href="#" class="text-md text-bold primary profile-add-item-select"> Организация 2</a>
+                    <a href="#" class="text-md text-bold primary profile-add-item-select"> Организация 3</a>
+                    <a href="#" class="text-md text-bold primary profile-add-item-select"> Организация 4</a>
+                    <a href="#" class="text-md text-bold primary profile-add-item-select"> Организация 5</a>
+                    <a href="#" class="text-md text-bold primary profile-add-item-select"> Организация 6</a>
+                  </div>
+                </div>
              
             </div>
           </div>
